# StemPATH-AI

./: .env.example  .gitignore  README.md  docker-compose.yml  pyproject.toml  stempath.py  stempath_cli.py
backend/: pyproject.toml
backend/app/db/: arango_client.py
backend/scripts/: query_occupation.py  seed_graph.py  setup_db.py
data/: seed_careers.json
scripts/: build_rag_documents.py  generate_embeddings.py  load_onet_data.py  load_seed_careers.py  populate.py  query_occupation.py  setup_db.py
src/: core.py
