[project]
name = "stempath-ai"
version = "0.1.0"
description = "Backend for StemPATH-AI, a GraphRAG STEM career assistant"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.4.6",
    "openai>=2.41.0",
    "pandas>=3.0.3",
    "python-arango>=8.3.3",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "streamlit>=1.58.0",
]
